cmake_minimum_required(VERSION 2.8)
project( Main )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( Main Main.cpp Rotation.cpp colorcorrection.cpp MedianFilter.cpp blacknwhite.cpp thresholding.cpp Sharpen.cpp Enhance.cpp )
target_link_libraries( Main ${OpenCV_LIBS} )